client/src/app/components/file-upload/file-upload.component.css
.file-drop-area {
  width: auto;
  height: auto;
  padding: 2rem;
  text-align: center;
  border: dashed 1px #0d6efd;
  position: relative;
  margin: 0 auto;
  border-radius: 21.5px;
}

.container {
  position: relative;
  background: #fff;
  border-radius: 21.5px;
  height: auto;
  width: auto;
  box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.5); 
  padding: 2rem;
}

.small-text{
  color: #999;  
}

.active{
  display: none;
}

.size {
  font-size: 12px;
  font-weight: 500;
  color: #a4a4a4;
  margin: 0;

}

.info {
  width: 100%;
  margin-left: 5px;
}

.name {
  font-size: 14px;
  font-weight: 500;
  color: #353f4a;
  margin: 0;
}

.files-list {
  margin-top: 1.5rem;
  display: flex;
  flex-grow: 1;
}

.hide {
  display: hidden;;
}

.single-file {
  display: flex;
  padding: 0.5rem;
  justify-content: space-between;
  align-items: center;
  margin-bottom: 1rem;

}

.delete{
  margin-left: 175px;    
  cursor: pointer;
  float: right;

}

.upload-icon{
  font-size: 60px;
  color: #0d6efd;
  margin-bottom: 30px;
}

input {
  opacity: 0;
  position: absolute;
  width: 100%;
  height: 100%;
  top: 0;
  left: 0;
}

label {
  cursor: pointer; 
}

info-wrap{
  display: flex;
  align-items: center;
}

button.btn {
  border-radius: 21.5px;
}

.upload-button{
  width: 100%;

}

.fa-trash{
  color: #d40d12;
}

.fa-trash:hover{
  color: #a90000;
}


h3 {
  font-size: 20px;
  font-weight: 600;
  color: black
}

